[package]
name = "reth-evm-precompiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
reth-ethereum = { workspace = true, features = ["test-utils", "node", "evm", "pool"] }
light-poseidon = { version = "0.4.0" }
ark-bn254 = { version = "0.5.0" }
reth-tracing.workspace = true
alloy-evm.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true

eyre.workspace = true
tokio.workspace = true
